# kvr

./: .gitignore  Cargo.toml  README.md
src/: data.rs  error.rs  lib.rs  magic.rs
