[package]
name = "kvr"
description = "An in-memory + append-only persistence key-value database with revision history."
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/kvr"
version = "0.3.0"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
edition = "2018"
keywords = ["data-oriented-design"]

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ulid = { version = "0.4.1", features = ["serde"] }
